# AutoSafe-PPT2

./: .gitignore  README.md
BluetoothPositioning[DROPPED]/Documentation/: BT Shield (Master Slave) - ITEAD Wiki.html
CarProgramVersion10/src/: category.cpp  category.h  location.cpp  location.h  main.cpp  motoren.cpp  pins.h  send.cpp
CarVersion11/src/: .main.cpp.swp  category.cpp  category.h  directions.cpp  main.cpp  protocol.c  receive.h
ControlCar/: ControlCar.sln
ControlCar/ControlCar/: ControlCar.csproj  ControlClient.cs  Packet.cs  Program.cs  Unpack.cs  connectForm.Designer.cs  connectForm.cs
ControlCar/ControlCarTest/: ControlCarTest.csproj  ControlClientTest.cs
LocationTcpServer/: LocationTcpServer.sln
LocationTcpServer/LocationTcpServer/: ESP.cs  Form1.Designer.cs  Form1.cs  LocationTcpServer.csproj  Packet.cs  Program.cs  locationServer.cs
PTT2CarGps/: PTT2CarGps.sln
PTT2CarGps/CarGpsTests/: CarGpsTest.cs  CarGpsTests.csproj  CarTestMethodes.cs  LocationTimeTestMethodes.cs  MessageTestMethodes.cs  TrailTestMethodes.cs
PTT2CarGps/PTT2CarGps/: Car.cs  GPSform.Designer.cs  GPSform.cs  GPSform.resx  IDrawable.cs  LocationTime.cs  PTT2CarGps.csproj  Packet.cs  Program.cs  Trail.cs  TrailCountNegativeException.cs  Unpack.cs  Warning.cs
ProgramCarWithReadingSensors/src/: category.cpp  category.h  main.cpp  protocol.h
Protocol/: Makefile  autosafe  meson.build
Protocol/src/: autosafe.c  main.c  meson.build  protocol.c
Protocol/test/: meson.build  protocol.c  test.c
ProtocolAS/: ProtocolAS.sln
ProtocolAS/ProtocolAS/: Form1.Designer.cs  (+6 more)
(+67 files in other folders)
